--- a/.github/workflows/integrate-dependencies.yaml
+++ b/.github/workflows/integrate-dependencies.yaml
@@ -22,8 +22,9 @@ jobs:
 
     - name: Search for ${{ github.event.inputs.build_version }} in libs.version.toml
       run: |
-        ls -ahl
         filename="gradle/libs.version.toml"
+        ls -l "${filename}"
+        ls -l "$filename"
         case "${{ github.event.inputs.repository }}" in
           "gha-scratch-pad1")
             sed -i '' -E "s/(gha1-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/" gradle/libs.version.toml
