--- a/.github/workflows/integrate-dependencies.yaml
+++ b/.github/workflows/integrate-dependencies.yaml
@@ -23,14 +23,13 @@ jobs:
     - name: Search for ${{ github.event.inputs.build_version }} in libs.version.toml
       run: |
         filename="gradle/libs.version.toml"
-        ls -l "${filename}"
-        ls -l "$filename"
+        man sed
         case "${{ github.event.inputs.repository }}" in
           "gha-scratch-pad1")
-            sed -i '' -E 's/(gha1-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' gradle/libs.version.toml
+            sed -i '' -E 's/(gha1-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' "${filename}"
             ;;
           "gha-scratch-pad2")
-            sed -i '' -E 's/(gha2-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' gradle/libs.version.toml
+            sed -i '' -E 's/(gha2-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' "${filename}"
             ;;
           *)
             echo "Repository ${{ github.event.inputs.repository }} not supported"
