--- a/.github/workflows/integrate-dependencies.yaml
+++ b/.github/workflows/integrate-dependencies.yaml
@@ -15,7 +15,7 @@ jobs:
   integrate:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout source @ ${{ github.ref }}
+    - name: Checkout source
       uses: actions/checkout@v4
       with:
         ref: main
@@ -26,10 +26,10 @@ jobs:
         man sed
         case "${{ github.event.inputs.repository }}" in
           "gha-scratch-pad1")
-            sed -i '' -E 's/(gha1-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' "${filename}"
+            sed -i -E 's/(gha1-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' "${filename}"
             ;;
           "gha-scratch-pad2")
-            sed -i '' -E 's/(gha2-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' "${filename}"
+            sed -i -E 's/(gha2-chart = \")([^\"]+)(\")/\1${{ github.event.inputs.build_version }}\3/' "${filename}"
             ;;
           *)
             echo "Repository ${{ github.event.inputs.repository }} not supported"
