--- a/.github/workflows/integrate-dependencies.yaml
+++ b/.github/workflows/integrate-dependencies.yaml
@@ -27,11 +27,9 @@ jobs:
       id: build_summary
       run: |
         if [ "${{ github.event_name }}" == "workflow_dispatch" ]; then
-          echo "Using workflow_dispatch input: ${{ github.event.inputs.build_version }}"
           echo "build_version=${{ github.event.inputs.build_version }}" >> $GITHUB_OUTPUT
           echo "build_repository=${{ github.event.inputs.build_repository }}" >> $GITHUB_OUTPUT
         elif [ "${{ github.event_name }}" == "repository_dispatch" ]; then
-          echo "Using repository_dispatch payload: ${{ github.event.client_payload.build_version }}"
           echo "build_version=${{ github.event.client_payload.build_version }}" >> $GITHUB_OUTPUT
           echo "build_repository=${{ github.event.client_payload.build_repository }}" >> $GITHUB_OUTPUT
         else
@@ -39,7 +37,7 @@ jobs:
           exit 1
         fi
 
-    - name: Replace ${{ steps.build_summary.outputs.build_repository }} build version with ${{ steps.build_summary.outputs.build_version }}
+    - name: Replace '${{ steps.build_summary.outputs.build_repository }}' build version with '${{ steps.build_summary.outputs.build_version }}'
       run: |
         filename="gradle/libs.version.toml"
         case "${{ steps.build_summary.outputs.build_repository }}" in
