--- a/.github/workflows/integrate-dependencies.yaml
+++ b/.github/workflows/integrate-dependencies.yaml
@@ -20,6 +20,9 @@ concurrency:
   group: "${{ github.workflow }} @ ${{ github.ref }}"
   cancel-in-progress: true
 
+permissions:
+  contents: write
+
 jobs:
   integrate:
     runs-on: ubuntu-latest
